# rapidata-python-sdk

./: .env.example  .gitignore  .openapi-generator-ignore  404.html  CLAUDE.md  CNAME  DYNAMIC_WORKER_IMPLEMENTATION.md  README.md  environment.yml  index.html  llms-full.txt  mkdocs.yml  objects.inv  openapi.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  sitemap.xml  versions.json
.claude/: settings.local.json
.github/: CODEOWNERS
2.x/: 404.html  llms.txt  objects.inv  sitemap.xml
3.x/: 404.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
advanced_orders/: index.html
api/: index.html
audience-quality-test/: README.md  audience_quality_test.py  audience_test_state.json  gpt_vs_nano_pairs.json  sample_pairs.json
confidence_stopping/: index.html
config/: index.html
custom_orders/: index.html
developers/: index.html
docs/: .gitignore  advanced_orders.md  ai_agents.md  api.md  audiences.md  authentication.md  claude_code.md  confidence_stopping.md  config.md  custom_orders.md  distributed_training.md  error_handling.md  flows.md  human_prompting.md  improve_order_quality.md  index.md  job_definition_parameters.md  job_progress.md  leaderboards.md  llms.txt  logging.md  mcp_server.md  migration_guide.md  mri.md  mri_advanced.md  order_parameters.md  quickstart.md  quickstart_classification.md  quickstart_compare.md  robots.txt  signals.md  starting_page.md  understanding_the_results.md
examples/: .env example  GALLERY_HEADER.md  advanced_classify_order.py  advanced_compare_order.py  advanced_free_text_order.py  audience_with_example_settings.py  basic_classify_order_image.py  basic_compare_order.py  basic_draw_order.py  basic_free_text_order.py  basic_locate_order.py  basic_order.ipynb  basic_ranking_order.py  basic_select_words_order.py  classify_order.py  classify_text_asset_order.py  compare_order.py  compare_prompt_image_alignment.py  complex_compare_order.py  conditional_validation_rapid_selection.py  dynamic_worker_demo.py  free_text_input_order.py  free_text_order.py  get_results.py  index.html  logging.py  onboarding_experiment.py  ranking_order.py  select_faulty_prompt_order.py  select_words_order.py  setup_client.py  setup_client_clients.py  temp copy.py  temp.py  traces.py  transcription_order.py
hooks/: search_boost.py
human_prompting/: index.html
improve_order_quality/: index.html
js/: login.js  tawk.js
logging/: index.html
mri/: index.html
mri_advanced/: index.html
openapi/: .gitignore  config.yaml  download-and-merge-spec.sh  download-spec.sh  filtered.swagger.json  generate-schema.sh  generate.sh  openapi-merge.json  output.swagger.json
quickstart/: index.html
quickstart_classification/: index.html
quickstart_compare/: index.html
reddit-edit-demand/: .env.example  .gitignore  README.md  business_category_rules.py  category_rules.py  reddit_edit_demand.py  requirements.txt
scripts/: build_public_openapi.py  gen_ref_pages.py  gen_ref_pages_preserve_md_files.py  generate_settings.py
search/: search_index.json
site_root/: README.md  index.html  llms.txt  robots.txt
src/: .openapi-generator-ignore  constants.py
starting_page/: index.html
stylesheets/: extra.css
tests/: test_job_review_and_cost_warning.py  (+1 more)
(+3199 files in other folders)
