[project]
name = "rapidata"
version = "3.0.5"
description = "Rapidata package containing the Rapidata Python Client to interact with the Rapidata Web API in an easy way."
authors = [{ name = "Rapidata AG", email = "info@rapidata.ai" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "requests>=2.32.3,<3",
    "pyjwt>=2.9.0,<3",
    "pydantic>=2.8.2,<3",
    "python-dateutil>=2.9.0.post0,<3",
    "tqdm>=4.66.5,<5",
    "deprecated>=1.2.14,<2",
    "colorama==0.4.6",
    "tinytag>=2.0.0,<3",
    "pandas>=2.2.3,<3",
    "authlib==1.6.5",
    "httpx>=0.28.1,<0.29",
    "packaging>=16.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "diskcache>=5.6.3,<6",
    "hatchling>=1.28.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1,<2",
    "black>=25.11.0",
    "ipykernel>=7.1.0,<8",
    "jupyter>=1.1.1,<2",
    "pyright>=1.1.407",
]
docs = [
    "mkdocs-material>=9.5.34,<10",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-autorefs>=1.2.0,<2",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.1,<0.7",
    "pygments>=2.18.0,<3",
    "mkdocs-section-index>=0.3.9,<0.4",
    "mike>=2.1.3,<3",
    "mkdocs-redirects>=1.2.2,<2",
    "mkdocs-glightbox>=0.4.0,<1",
    "mkdocs-llmstxt-md>=0.1.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/rapidata"]

[tool.hatch.build.targets.wheel]
include = ["src/rapidata"]

[tool.hatch.build.targets.wheel.sources]
"src/rapidata" = "rapidata"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
